tests/typing/faulty_ops_c.sy
start :: fn do
    set.contains' (set.from_list' [1, 2, 3]), 1
    set.contains' (set.from_list' ["abc", "abc"]), 1
end
// error: $Mismatch
